src/tests/snapshots/gitu__tests__editor__re_enter_picker_from_menu.snap
---
source: src/tests/editor.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 2/2   Checkout › █                                                             |
▌origin/HEAD                                                                    |
 origin/main                                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: a42edcc2f55fe7af
