src/tests/snapshots/gitu__tests__editor__renderer_features_offers_the_configured_ones.snap
---
source: src/tests/editor.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Renderer features                                                              |
▌    side-by-side                                                               |
     line-numbers                                                               |
     keep-plus-minus-markers                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 2d68c3c393849aca
