src/tests/snapshots/gitu__tests__editor__the_list_shows_feature_keys_and_asks_for_one.snap
---
source: src/tests/editor.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 2/2   Key for side-by-side › █                                                 |
▌    side-by-side                                                               |
   l line-numbers                                                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: df4728bd73b87223
